# oca-metrics

./: .gitignore  README.es.md  README.md  README.pt.md  pyproject.toml
oca_metrics/: __init__.py  core.py
oca_metrics/adapters/: base.py  elasticsearch.py  opensearch.py  parquet.py
oca_metrics/cli/: compute.py  prepare.py
oca_metrics/data/categories/: domain.txt  field.txt  subfield.txt  topic.txt
oca_metrics/preparation/: extract.py  integration.py  scielo.py
oca_metrics/utils/: categories.py  constants.py  csv_schema.py  metadata.py  metrics.py  normalization.py  scielo.py
tests/: create_dummies.py  test_adapters_parquet.py  test_categories.py  test_cli.py  test_core.py  test_full_pipeline.py  test_idempotency.py  test_integration.py  test_merge_strategies.py  test_normalization.py  test_preparation_scielo.py  test_schema_compatibility.py  test_unmatched_audit.py  test_utils_metrics.py  test_utils_parquet.py
